--- a/requirements.txt
+++ b/requirements.txt
@@ -50,7 +50,7 @@ sphinx==5.3.0
     # via
     #   -r requirements.in
     #   sphinx-revealjs
-sphinx-revealjs==1.5.2
+sphinx-revealjs @ https://github.com/Nekmo/sphinx-revealjs/archive/html-line.zip
     # via -r requirements.in
 sphinxcontrib-applehelp==1.0.2
     # via sphinx
